tests/v05-vertical-slice/reject/spawn_lambda_legacy.hew
// Reject fixture: E_LEGACY_SPAWN_LAMBDA_SYNTAX
// The `spawn (params) => body` lambda-actor syntax was removed in v0.5.
// Expected: parse error containing "E_LEGACY_SPAWN_LAMBDA_SYNTAX"
// Use `actor |params| { body }` instead.
fn main() {
    let w = spawn (x: i64) => {
        println(x);
    };
    w.send(1);
}
